--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+#inp1 {
+  width: 500px;
+  border: 3px solid black;
+  padding: 8px;
+  margin: 20px auto;
+  display: block;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#but1 {
+  width: 60px;
+  border: 3px solid black;
+  border-radius: 5px;
+  padding: 7px;
+  margin: 10px 5px;
+  display: inline-block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#but2 {
+  width: 100px;
+  border: 3px solid black;
+  border-radius: 5px;
+  padding: 7px;
+  margin: 10px 5px;
+  display: inline-block;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.item {
+  border: 3px solid black;
+  border-radius: 5px;
+  padding: 7px;
+  margin: 10px auto;
+  width: 60%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.sp {
+  flex-grow: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.item button {
+  margin-left: 10px;
 }
